# ic-alloy

./: Cargo.toml  README.md
crates/alloy/: Cargo.toml
crates/alloy/src/: lib.rs
crates/contract/src/: call.rs
crates/provider/: Cargo.toml
crates/provider/src/: builder.rs  lib.rs
crates/provider/src/provider/: mod.rs  root.rs  trait.rs
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: batch.rs  builder.rs  client.rs  icp_poller.rs  lib.rs
crates/signer-icp/: Cargo.toml  README.md
crates/signer-icp/src/: lib.rs  signer.rs  utils.rs
crates/transport/: Cargo.toml
crates/transport-icp/: Cargo.toml  README.md
crates/transport-icp/src/: evm_rpc.rs  lib.rs
crates/transport/src/: utils.rs
