[package]
name = "alloy-transport-icp"
description = "ICP transport implementation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
alloy-json-rpc.workspace = true
alloy-transport.workspace = true
ic-cdk = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
